8264402: drop "Restricted" suffix for methods enabled by enable-native-access and add fine grained native-access for CLinker
Reviewed-by: jvernee, mcimadamore